# Numera

./: .gitignore  README.md  idea.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  GLOSSARY.md  PRD.md  TRD.md
scripts/: demo.py
src/numera/: __init__.py  ports.py
src/numera/adapters/: __init__.py  api.py  calendar.py  clock.py  dto.py  mcp_server.py  observability.py  rates.py  repositories.py  slippage.py  venue.py  venue_fixed.py
src/numera/adapters/persistence/: __init__.py  codec.py  sqlite_repos.py
src/numera/application/: __init__.py  config.py  container.py  use_cases.py
src/numera/domain/: __init__.py  currency.py  daycount.py  errors.py  models.py  money.py  rate.py  services.py
tests/: conftest.py  test_attribution.py  test_currency.py  test_decision_engine.py  test_e2e_http.py  test_forward.py  test_mcp.py  test_money.py  test_persistence.py  test_phase5.py  test_policy.py  test_slippage.py  test_venue_contract.py
